--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -17,7 +17,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/Theme.CamClient.PopupOverlay" />
+            app:popupTheme="@style/Theme.CamClient.PopupOverlay"
+            app:titleTextColor="#ffffffff"
+        />
 
     </com.google.android.material.appbar.AppBarLayout>
 
