--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -5,11 +5,15 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/id_text"
+        android:id="@+id/ip_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textSize="14sp"
+        android:textColor="#80000000"
+
+    />
 
     <TextView
         android:id="@+id/content"
