--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -7,7 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
+    android:layout_marginTop="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginBottom="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ItemListActivity"
     tools:listitem="@layout/item_list_content" />
